fixed the margin spacing

--- a/css/main.css
+++ b/css/main.css
@@ -13,8 +13,8 @@ body {
 }
 
 main {
-	width: 78%;
-    height: 70%;
+	width: 853px;
+    height: 488px;
  	margin: auto;
     margin-top: 100px;
 }
